# ecs_net

./: CMakeLists.txt  binary-layout.drawio  ecs-net.cpp  flecs-net.c  flecs-net.h  synchronization.drawio
flecs/: flecs.c  flecs.h
include/: change_serialization.hpp  component_serializer.hpp  component_traits.hpp
include/ecs_net/: change_serialization.hpp  commit.hpp  component_serialization.hpp  entity_version.hpp  registry.hpp  serialization.hpp
src/: entity_version.cpp
test/: CMakeLists.txt  flecs_init.c
